<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/aNum"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/aNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/coefA"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bNum"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/bNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/coefB"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/cNum"
        app:layout_constraintTop_toBottomOf="@+id/aNum"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/cNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/coefC"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/bNum"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:background="@color/cardview_dark_background"
        android:text="@string/count"
        app:layout_constraintBottom_toTopOf="@+id/resultDef"
        app:layout_constraintTop_toBottomOf="@+id/cNum"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultDef"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/resultViet"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultViet"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/resultDef"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130sp"
        android:background="@color/cardview_dark_background"
        android:text="@string/graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultViet"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>